[package]
name = "linux_raw_input_rs"
version = "0.1.6"
authors = ["Mikhail Kharitonovich <kharitonovich.m@gmail.com>"]
repository = "https://github.com/Minizinger/linux_raw_input_rs"
description = "Simple library to grab raw input from keyboard in linux systems"
license = "MIT"

[dependencies]
serde_derive = "1.0.8"
serde = "1.0.8"